Refactor after merge

--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -1,299 +1,3 @@
 {
-  "apps": [
-    {
-<<<<<<< HEAD
-      "serverURL": "https://parseapi.back4app.com",
-      "appId": "EtXNcokaQWvOFSUwGnpFynJDs5KZIrWoHuKUUIs7",
-      "javascriptKey": "jC4d9fdpx7MVr4QU6eeLo1XIzZzZZMlJAnC8DtjE",
-      "restKey": "qRymDwwfe4fbHwJdxlZJ7k8FZy1DKIUuKsNwqH5w",
-      "clientKey": "9sQN891739FI9ZnWIiyDmYkEinB7npaxwFEUovLf",
-      "windowsKey": "rjjDliYKKaRtRCObAFmleQ1cRb3KDGvmgkH1bwE9",
-      "webhookKey": "FngrYuB9E3pmjXicxFRxL0cXVtqo4je2kgXQi1pD",
-      "apiKey": "870fc5e5-c0e3-430d-be06-e0e9365c070c",
-      "appName": "logger",
-      "production": true,
-      "appNameForURL": "0310e02b-97c3-42aa-ba4f-eb63741a2325",
-      "feedbackEmail": "lucas@back4app.com",
-      "custom": {
-        "isGDPR": false,
-        "forceShowGDPRFields": false
-      },
-      "masterKey": "9ppI3YsFnOkeb6vL8mJp4PuDv57MP43Sebvuoads"
-    },
-    {
-      "serverURL": "https://parseapi.back4app.com",
-      "appId": "0oESbPhbqXjt2x5gKNJB4TC5eGFVUw7JlXtWEO2l",
-      "javascriptKey": "jwrf7wMR8HFoTzG5eSQ6A1BIobL0iQ2pmwNCc3P7",
-      "restKey": "QgF8fziTa0X61MdXHui99Kkm0ek2GXCtcn4LqT4E",
-      "clientKey": "G0Uwd5zHfEY9Lm8WqXuF2MYYCpFH5chlgnu5OkT2",
-      "windowsKey": "IK1yietzKTU2keuOr13r5TpQ5CjP6cFba4mceVFb",
-      "webhookKey": "cTBHV1JnOFctD6MyidxB6BKXw35LtzXKuymZsjqK",
-      "apiKey": "17b0dcd3-4c01-40bf-8eab-b5534448c588",
-      "appName": "Clone from parse-dashboard",
-      "production": true,
-      "appNameForURL": "0ece0fb7-a18b-45b1-9c00-d5baff513801",
-      "feedbackEmail": "lucas@back4app.com",
-      "custom": {
-        "isGDPR": false,
-        "forceShowGDPRFields": false
-      },
-      "masterKey": "VBUaJsYZHZ1qQwzQdnvKT8VPVrShb9jNabGeb05e"
-    },
-    {
-      "serverURL": "https://parseapi.back4app.com",
-      "appId": "T2TDcmmPXQ7aXXSLXAeIuN5mpiZui7cZVbe3zLwD",
-      "javascriptKey": "m5HWZ4FDkZpRJCMYfB3ZSZDIKL3hVzL0m7xDtkO3",
-      "restKey": "r84FHf6KTgPMbDTBeGJDwOAIE9faWfQ4Thk3MKJi",
-      "clientKey": "KdNtxuqS5J8H0ctCm8aqYvQVpPVYHYuhDKaFMXTC",
-      "windowsKey": "Eu0GvyCjwdyX5SgC3TKOAuDEgL5KM6dPB9GyNjmW",
-      "webhookKey": "SspjHmh21rfGWeo4FeUQCYSp7EAWQtLtiLsBPego",
-      "apiKey": "babac24b-4ca0-4506-806b-f69855ad7c4d",
-      "appName": "iOS Push",
-      "production": true,
-      "appNameForURL": "3ed9f25d-a757-429b-be7d-dd030e0cbc62",
-      "feedbackEmail": "lucas@back4app.com",
-      "custom": {
-        "isGDPR": false,
-        "forceShowGDPRFields": false
-      },
-      "masterKey": "oereF88IzZxKmUyVIVRdLLWBs9rDJz3SdrLI1C2t"
-    },
-    {
-      "serverURL": "https://parseapi.back4app.com",
-      "appId": "gdOzKkzx5aPWzDVSNx5q7pemUqvmIuo1XaUwboGw",
-      "javascriptKey": "IC5pUJ0PPUbI9Cgm4WVsWMGy2TJWiWkDFlu94z6W",
-      "restKey": "KCCs79wIO3T6u4jOWqHIjqmzuL8X3DYYP4GsD498",
-      "clientKey": "O9ri5ZQ2P7B2D5GTPuTogU1Jw1cA39eNW4ZW94I1",
-      "windowsKey": "TQOclLIVa2AkSvUBa9BFJKwA6laYazgqyaiYcSQA",
-      "webhookKey": "LpG0lmw8nnGATQy7fyjNAWD8NJYOumr469H9zN3a",
-      "apiKey": "effcceb8-5476-4746-a3c1-654afa303fb9",
-      "appName": "test",
-      "production": true,
-      "appNameForURL": "4d19d7e9-a31b-401b-bc11-7bf47ddc3303",
-      "feedbackEmail": "lucas@back4app.com",
-      "custom": {
-        "isGDPR": false,
-        "forceShowGDPRFields": false
-      },
-      "masterKey": "apjjXeJsbpQ2sisYeQtQ6lnZHcCRnhR6r0C1f2Me"
-    },
-    {
-      "serverURL": "https://parseapi.back4app.com",
-      "appId": "JzgL1EzXpS2q4FJhYflng6RAlNkVjCwWvYfVtm3b",
-      "javascriptKey": "jOo2ERfiVnz8TQFHAjsCk5K8T8zwghTfzT8SZFJk",
-      "restKey": "PsvipyXdB3vEG4LxUsbptlQF1YdmUsdzznNoYjLe",
-      "clientKey": "E8eSmY2Sy1kXi7bxygReG1PDcCXOuGlgQk9z2IEO",
-      "windowsKey": "uxR5Ukf7QjLNvLQs4mBS5dbyfmOm5amKLnH1uT4L",
-      "webhookKey": "Acf9VFlM4z8v0q8x0OxdECkgvEIQkGMhH7HOcvBU",
-      "apiKey": "e69116d8-8141-4740-b2bf-6a79a705157e",
-      "appName": "Cohort CLONE",
-      "production": true,
-      "appNameForURL": "c3d2ad6f-84bd-480c-9d34-182426edb455",
-      "feedbackEmail": "lucas@back4app.com",
-      "custom": {
-        "isGDPR": false,
-        "forceShowGDPRFields": false
-      },
-      "masterKey": "ncYpHEDR87lmGNUZM2Bw8ns8pzDPs9i3LM0bSI2r"
-    },
-    {
-      "serverURL": "https://parseapi.back4app.com",
-      "appId": "87XbYEfNYaLpdfwzi6QALswccF1e6xZzFOyOpLgX",
-      "javascriptKey": "RTHzGl0nEf9T9P00VgBwBefjPaMAk6dwl1CedjUj",
-      "restKey": "SKMRbZGIgDLK9ny04pPLxGcwVPxuSi6B6gslvqPV",
-      "clientKey": "50Sh2YSPcG87wtMCpD3EyqyVt9a0cMD1AoMgemeh",
-      "windowsKey": "sjhLtp2Gf5KG6xUMRP5xpfHohf3VzdadCB1KWJ67",
-      "webhookKey": "a7KDCNrDQPQutMoV7ZHrZfrKqob1QO0DxXTmGLAN",
-      "apiKey": "22dd7475-ddff-44ee-917b-ff7a90365ff9",
-      "appName": "GDPR Register",
-      "production": true,
-      "appNameForURL": "fb55a19d-8e2d-4f23-b494-d4ab60c1b4fa",
-      "feedbackEmail": "lucas@back4app.com",
-      "custom": {
-        "isGDPR": false,
-        "forceShowGDPRFields": false
-      },
-      "masterKey": "Gdd6C7OaHSzk3lHtaPeyNsVYBVIxi0TvSFHtp5Oj"
-    },
-    {
-      "serverURL": "https://parseapi.back4app.com",
-      "appId": "m4ZJPWHE692ArkBsb9P9eNa4tDlRNdidEdPPedZY",
-      "javascriptKey": "u0zAH0JVfwp2Ci2ajwQHtBKslbN20CuPMOaHkpK0",
-      "restKey": "5CAXwBlbUGFCByFfdME1gceSmAik37iVgZq41Rkv",
-      "clientKey": "GFIoutHdHLAWUpsbcJz8HCEqiIxv6RkxMafp169M",
-      "windowsKey": "RZEBN8OvqDxcnF6MIF4hgMxLjNzCVORnx1lin5Rv",
-      "webhookKey": "fCa80DTbJt8fPFYUBOJ3p7CXhjSRfPBUF6x8KiBz",
-      "apiKey": "cd5b0663-9d11-40ad-9966-9e3cc2c5e762",
-      "appName": "Checkout",
-      "production": true,
-      "appNameForURL": "0bb9c0bd-7adc-4d52-a603-b79b3daa4324",
-      "feedbackEmail": "lucas@back4app.com",
-      "custom": {
-        "isGDPR": false,
-        "forceShowGDPRFields": false
-      },
-      "masterKey": "DRa3m76uABLK3nZeZJJt4tfqaeo4k6cbIz7ZZQ6C"
-    },
-    {
-      "serverURL": "https://dashboard.back4app.com/parseapi",
-      "appId": "8If5RG6NvchAkJS7LIpPjbExZONRcrgn4xuBjyEg",
-      "javascriptKey": "HlRRdpNMNoTEL7XbodkAzy4bgLJnRZNwwO78VvKv",
-      "restKey": "I4zOlITcFCXim6Gwy1xlBdrsW2N3TBMJlSda0orn",
-      "clientKey": "hkl6dhNrVyOl9HcdCGIO0hDOMcD41FykpoA7TCyi",
-      "windowsKey": "mIVlADvTpHWRJZJ1DFQ9Fc7NZdDrKV52fut7mZyM",
-      "webhookKey": "tp2PozsXftmmkcB8sQ9tWbDgiLuO0lGsfu9JF91a",
-      "apiKey": "6e0ecdcb-b488-42a9-ab70-be33e120c60c",
-      "appName": "CheckoutCLONE",
-      "production": true,
-      "appNameForURL": "37678c77-96e4-4eee-b362-72f8b9446721",
-      "feedbackEmail": "lucas@back4app.com",
-      "custom": {
-        "isGDPR": true,
-        "forceShowGDPRFields": false
-      },
-      "masterKey": "IqiIWkHlAe6AI09dH7X1VrYS5ecSKxiuFdJBkSM2"
-    },
-    {
-      "serverURL": "https://parseapi.back4app.com",
-      "appId": "R2VW9DEGbAjVmznpEyN8WK8WhmNJ23VwLLJ8Tpca",
-      "javascriptKey": "s9f8FdweantNmG8x4cKnXPX8m76IJG6zljXlANRp",
-      "restKey": "wFyFRWqVHrEai9DEBS0aYu1vLJ0qbN5F9fqfPiUG",
-      "clientKey": "3WpvlzAgSxr3DijPkdYpcwH2LFMAIfocTpUd4Yv9",
-      "windowsKey": "nueTPto0Ys1SCBThVx7NFaVZ8Hb15woePEiJH9PN",
-      "webhookKey": "HpPtoOykICrLTHEHlwmRxrNQq2Jv8JhseAQm6JG0",
-      "apiKey": "f1c27380-dfa1-46c0-871a-d3c4f520767f",
-      "appName": "Cohort Report",
-      "production": true,
-      "appNameForURL": "ad546647-ab19-468e-a050-43cc22be2743",
-      "feedbackEmail": "lucas@back4app.com",
-      "custom": {
-        "isGDPR": false,
-        "forceShowGDPRFields": false
-      },
-      "masterKey": "jmTvZAAtHIuWJnntTsGkrRgMsydNI4VrGHXL8V6l"
-    },
-    {
-      "serverURL": "https://parseapi.back4app.com",
-      "appId": "wraWU0iPGN7XKOAszSYIbgEDxRVebh7S1PwHWoT7",
-      "javascriptKey": "bYl133Nhm98xXNnxKOb75DhWdppR7y5FvZhTfdUl",
-      "restKey": "pJixxESsjTU0NH7xk6JVgxo683PloUKca9vTR6Sb",
-      "clientKey": "YhTu1gOlEdiJb4FXGXokjZkFwoskckaPWWAYtSul",
-      "windowsKey": "h8dDOqUiQXkwLGTq1Il9mpDBLg1687YQLoseFPyt",
-      "webhookKey": "uOX9Dhtqh1ui1ZDkkIaaV2LGXMXtzMYZ9mA6Nd0p",
-      "apiKey": "c2c13cfa-370f-4ded-b2a8-6ddd62ea1fde",
-      "appName": "Mr.Boom",
-      "production": true,
-      "appNameForURL": "c68e6a4a-d784-4790-bb85-fb34a2168a8d",
-      "feedbackEmail": "lucas@back4app.com",
-      "custom": {
-        "isGDPR": false,
-        "forceShowGDPRFields": false
-      },
-      "masterKey": "3NG0wfMouZ3wpriDigFe8KSgXtTxndSOP5ZGg4Pd"
-    },
-    {
-      "serverURL": "http://localhost:3300",
-      "appId": "srDKlHRBjr2iwIaZvySBBmCp4obeXK60V4eGbRfj",
-      "restAPIKey": "S8f2sdo3i6fdzvEBCus3t1nD69CtZmIeBbWfhLvC",
-      "javascriptKey": "JFnu9AxlPXzkVlwDkm03wdZeQ6Lpdlg0BhojcbkY",
-      "clientKey": "mR8Zmw5THCGULRMGmoXsmAAWpuhK2cOrLzkS2IsX",
-      "fileKey": "abd5d9f6-c3a4-4772-a8f8-cd3b531f4da3",
-      "dotNetKey": "3cPT4E067loCphMJz9PtMgxMf6K1jL2nh89UbFn6",
-      "webhookKey": "wwQGHsvnKZLoWMrzoEZbvynkIw0BmZpzpM3JjsAi",
-      "appName": "lol",
-      "production": true,
-      "appNameForURL": "fce019a1-dae1-4e93-bd0c-76691cdbed08",
-      "feedbackEmail": "lucas@back4app.com",
-      "custom": {
-        "isGDPR": false,
-        "forceShowGDPRFields": false
-      },
-      "masterKey": "9Amrht99xPLz0iLAGC8zdvPslkjvgsT8GW7QL2F3"
-    }
-  ],
-  "newFeaturesInLatestVersion": [],
-  "user": {
-    "email": "lucas@back4app.com",
-    "has_password": false,
-    "account_keys": [],
-    "name": "lucas@back4app.com"
-  }
-=======
-      "apiKey": "33234033-ff53-4857-9822-7c095b29d1a1",
-      "appNameForURL": "33234033-ff53-4857-9822-7c095b29d1a1",
-      "id": "33234033-ff53-4857-9822-7c095b29d1a1",
-      "loggerAdapter": {
-        "module": "@back4app/back4app-logger-adapter",
-        "options": {
-          "udp": true,
-          "logBody": true,
-          "logBodyMillis": 100,
-          "checkMasterKey": false,
-          "defaults": {
-            "timeout": 1000
-          },
-          "logServer": true,
-          "logServerUrl": "http://loggerproxy.back4app.com:9900/apps_server",
-          "logServerUdpHost": "loggerproxy.back4app.com",
-          "logServerUdpPort": 49003,
-          "logRequests": true,
-          "logRequestsUrl": "http://loggerproxy.back4app.com:9900/apps_requests",
-          "logRequestsUdpHost": "loggerproxy.back4app.com",
-          "logRequestsUdpPort": 49002,
-          "logConsole": true,
-          "logConsoleUrl": "http://loggerproxy.back4app.com:9900/apps_console",
-          "logConsoleUdpHost": "loggerproxy.back4app.com",
-          "logConsoleUdpPort": 49001
-        }
-      },
-      "databaseURI": "mongodb://admin:Oj3gQwqcxZX7iqk0c01jqcVN@mongodb.back4app.com/1092c422a65f4601b4853eca907e5f2d?connectTimeoutMS=30000",
-      "appId": "DrcS4pwOkxngrYsikDRAbfCZjZMq6ZruzvdM2y7M",
-      "masterKey": "rBWuaMCFiZzPy4IjkVFQVaeZPWb3ES3jdxIp5x8s",
-      "restAPIKey": "w2iCq0AeshoUU8NbVjTGowFMFv1YvQ478EvEgueK",
-      "javascriptKey": "0F2x31ceRPn871tO3Wc5Ua8a3mShFjb3V1kz3SrN",
-      "clientKey": "hPjnbxiI6c0QVpJWzG5iUMerF1DXIuMlHIxhAWbE",
-      "fileKey": "c71eb128-0e57-4cde-af58-808f90e397a1",
-      "dotNetKey": "JH8AS3LO6GlogstmWevuKbs72UrRRJldnfIG9EIK4Vwc",
-      "webhookKey": "QhO0QZZM9pJ632rzCqEYWSp4A9fO3vCah045ZNe7",
-      "cloud": "cloudCodeWrapper.js",
-      "logsFolder": "./data/parseLogs/",
-      "verbose": false,
-      "serverURL": "http://localhost:3333",
-      "publicServerURL": "http://localhost:3333",
-      "appName": "teste queijo",
-      "emailAdapter": {
-        "module": "parse-server-mandrill-adapter",
-        "options": {
-          "apiKey": "C6rFORDBBMHYgdPQZYxKqQ",
-          "fromEmail": "no-reply@back4app.com",
-          "replyTo": "no-reply@back4app.com",
-          "displayName": "",
-          "verificationSubject": "",
-          "verificationBody": "",
-          "passwordResetSubject": "",
-          "passwordResetBody": ""
-        }
-      },
-      "push": {
-        "osx": [
-          {
-            "_id": "c5ecc30c-415d-4feb-885e-93d59eadd7c0",
-            "pfx": "/Users/paiva/b4a/com.back4app.macos.p12",
-            "bundleId": "com.back4app.macos",
-            "production": true,
-            "expiresAt": "2019-07-19T12:37:17.000Z"
-          },
-          {
-            "_id": "c5ecc30c-415d-4feb-885e-93d59eadd7c1",
-            "pfx": "/Users/paiva/b4a/com.back4app.macos_developer.p12",
-            "bundleId": "com.back4app.macos",
-            "production": false,
-            "expiresAt": "2019-07-19T12:37:17.000Z"
-          }
-        ]
-      },
-      "production": true
-    }
-  ]
->>>>>>> origin/master
+  "apps": []
 }
