Add support to set a timezone in configuration

--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -4,6 +4,7 @@
     "appId": "hello",
     "masterKey": "world",
     "appName": "",
+    "timezone": null,
     "iconName": "",
     "primaryBackgroundColor": "",
     "secondaryBackgroundColor": ""
