Finish CodeTree component

--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "popper.js": "^1.12.9",
+    "react-file-reader": "^1.1.4",
+    "react-syntax-highlighter": "^9.0.0",
     "react-tabs": "^2.2.2",
     "whatwg-fetch": "^2.0.3"
   },
