UnhandledPromiseRejection and Warnings

--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -6,7 +6,8 @@
     "appName": "",
     "iconName": "",
     "primaryBackgroundColor": "",
-    "secondaryBackgroundColor": ""
+    "secondaryBackgroundColor": "",
+    "supportedPushLocales": ["en"]
   }],
   "iconsFolder": "icons"
 }
