--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -6,8 +6,7 @@
     "appName": "",
     "iconName": "",
     "primaryBackgroundColor": "",
-    "secondaryBackgroundColor": "",
-    "supportedPushLocales": ["en"]
+    "secondaryBackgroundColor": ""
   }],
   "iconsFolder": "icons"
 }
