--- a/package.json
+++ b/package.json
@@ -77,13 +77,13 @@
     "prismjs": "1.16.0",
     "prop-types": "15.7.2",
     "query-string": "6.4.2",
-    "react": "16.8.5",
+    "react": "16.8.6",
     "react-dnd": "7.4.3",
     "react-dnd-html5-backend": "7.4.0",
-    "react-dom": "16.8.5",
-    "react-router": "4.4.0",
-    "react-router-dom": "4.4.0",
-    "react-test-renderer": "16.8.5",
+    "react-dom": "16.8.6",
+    "react-router": "4.4.0-beta.8",
+    "react-router-dom": "4.4.0-beta.8",
+    "react-test-renderer": "16.8.6",
     "request": "2.87.0",
     "request-promise": "4.2.4",
     "sass-loader": "7.1.0",
