--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "html-webpack-plugin": "^3.2.0",
     "intro.js": "^2.9.3",
     "jquery": "^3.2.1",
+    "js-base64": "^2.5.1",
     "json-file-plus": "^3.2.0",
     "jstree": "^3.3.5",
     "lodash": "^4.17.10",
