--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "popper.js": "^1.12.9",
     "re-resizable": "^4.11.0",
     "react-file-reader": "^1.1.4",
+    "react-infinite-scroller": "^1.2.4",
     "react-player": "^1.7.0",
     "react-syntax-highlighter": "^9.0.0",
     "react-tabs": "^2.2.2",
