--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "popper.js": "^1.12.9",
     "re-resizable": "^4.11.0",
     "react-file-reader": "^1.1.4",
-    "react-helmet": "5.2.0"
+    "react-helmet": "5.2.0",
     "react-infinite-scroller": "^1.2.4",
     "react-player": "^1.7.0",
     "react-syntax-highlighter": "^9.0.0",
