--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "marked": "0.6.2",
     "node-sass": "4.9.3",
     "nodemon": "^1.18.3",
-    "parse": "git+https://github.com/back4app/Parse-SDK-JS.git",
+    "parse": "git+https://github.com/back4app/Parse-SDK-JS.git#upstream",
     "path-to-regexp": "3.0.0",
     "prismjs": "1.16.0",
     "prop-types": "15.7.2",
