--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "lint": "eslint . --ignore-path .gitignore --cache",
     "pretest": "npm run lint",
     "generate": "node scripts/generate.js",
-    "prepublish": "webpack --config webpack/publish.config.js --progress",
+    "prepare": "webpack --config webpack/publish.config.js --progress",
     "server": "node server.js",
     "start": "node ./Parse-Dashboard/index.js"
   },
