--- a/package.json
+++ b/package.json
@@ -41,12 +41,21 @@
     "create-react-class": "15.6.3",
     "csurf": "1.10.0",
     "express": "4.13.4",
+    "history": "4.9.0",
     "json-file-plus": "3.2.0",
     "package-json": "6.1.0",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
+    "prop-types": "15.7.2",
+    "prismjs": "1.16.0",
     "query-string": "6.5.0",
-    "react-helmet": "5.2.1"
+    "react": "16.8.6",
+    "react-dnd": "7.4.5",
+    "react-dnd-html5-backend": "7.4.4",
+    "react-dom": "16.8.6",
+    "react-helmet": "5.2.1",
+    "react-router": "4.4.0-beta.8",
+    "react-router-dom": "4.4.0-beta.8"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
@@ -62,11 +71,10 @@
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "core-js": "2.6.5",
     "css-loader": "1.0.0",
-    "eslint": "5.0.0",
+    "eslint": "5.16.0",
     "eslint-plugin-jest": "22.5.1",
     "eslint-plugin-react": "7.13.0",
     "file-loader": "3.0.0",
-    "history": "4.9.0",
     "http-server": "0.11.1",
     "immutable": "3.8.1",
     "immutable-devtools": "0.1.3",
@@ -77,15 +85,7 @@
     "parse": "2.4.0",
     "parse-server": "github:parseplatform/parse-server#master",
     "path-to-regexp": "3.0.0",
-    "prismjs": "1.16.0",
-    "prop-types": "15.7.2",
     "puppeteer": "1.15.0",
-    "react": "16.8.6",
-    "react-dnd": "7.4.5",
-    "react-dnd-html5-backend": "7.4.4",
-    "react-dom": "16.8.6",
-    "react-router": "4.4.0-beta.8",
-    "react-router-dom": "4.4.0-beta.8",
     "react-test-renderer": "16.8.6",
     "request": "2.87.0",
     "request-promise": "4.2.4",
