--- a/package.json
+++ b/package.json
@@ -33,17 +33,22 @@
     "LICENSE"
   ],
   "dependencies": {
+    "@babel/runtime": "7.4.4",
     "bcryptjs": "2.3.0",
     "body-parser": "1.19.0",
     "commander": "2.20.0",
     "connect-flash": "0.1.1",
-    "cookie-session": "2.0.0-alpha.1",
+    "cookie-session": "2.0.0-beta.3",
     "create-react-class": "15.6.3",
     "csurf": "1.10.0",
-    "express": "4.13.4",
+    "express": "4.16.4",
     "history": "4.9.0",
+    "immutable": "3.8.1",
+    "immutable-devtools": "0.1.3",
+    "js-beautify": "1.10.0",
     "json-file-plus": "3.2.0",
     "package-json": "6.1.0",
+    "parse": "2.4.0",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
     "prop-types": "15.7.2",
@@ -65,7 +70,6 @@
     "@babel/polyfill": "7.4.4",
     "@babel/preset-env": "7.4.4",
     "@babel/preset-react": "7.0.0",
-    "@babel/runtime": "7.4.4",
     "babel-eslint": "10.0.0",
     "babel-loader": "8.0.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
@@ -76,13 +80,9 @@
     "eslint-plugin-react": "7.13.0",
     "file-loader": "3.0.0",
     "http-server": "0.11.1",
-    "immutable": "3.8.1",
-    "immutable-devtools": "0.1.3",
-    "jest-cli": "23.2.0",
-    "js-beautify": "1.10.0",
+    "jest": "24.8.0",
     "marked": "0.6.2",
-    "node-sass": "4.9.3",
-    "parse": "2.4.0",
+    "node-sass": "4.12.0",
     "parse-server": "github:parseplatform/parse-server#master",
     "path-to-regexp": "3.0.0",
     "puppeteer": "1.15.0",
