test npm ci cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ branches:
 
 cache:
   directories:
-  - node_modules
+  - "$HOME/.npm"
 
 before_install:
   - npm install -g greenkeeper-lockfile@1
