--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ after_script:
   - greenkeeper-lockfile-upload
 deploy:
   provider: npm
+  skip_cleanup: true
   on:
     tags: true
     all_branches: true
