--- a/package.json
+++ b/package.json
@@ -33,89 +33,91 @@
     "LICENSE"
   ],
   "dependencies": {
+    "@babel/runtime": "7.4.5",
+    "@back4app/back4app-settings": "^1.1.0",
     "axios": "^0.18.0",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.19.0",
     "bootstrap": "4.0.0-alpha.6",
     "commander": "^2.20.0",
     "connect-flash": "^0.1.1",
-    "cookie-session": "^2.0.0-alpha.1",
-    "create-react-class": "15.6.3",
+    "cookie-session": "2.0.0-beta.3",
     "copy-to-clipboard": "^3.0.8",
+    "create-react-class": "15.6.3",
     "csurf": "^1.10.0",
-    "express": "^4.13.4",
+    "express": "4.17.1",
+    "history": "4.9.0",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^3.2.0",
+    "immutable": "3.8.1",
+    "immutable-devtools": "0.1.3",
     "intro.js": "^2.9.3",
     "jquery": "^3.2.1",
     "js-base64": "^2.5.1",
+    "js-beautify": "1.10.0",
     "json-file-plus": "^3.2.0",
     "jstree": "^3.3.5",
     "lodash": "^4.17.10",
     "material-design-iconic-font": "^2.2.0",
     "moment": "^2.24.0",
-    "package-json": "^5.0.0",
+    "package-json": "6.4.0",
     "parse": "git+https://github.com/back4app/Parse-SDK-JS.git#upstream",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "popper.js": "^1.12.9",
+    "prismjs": "1.16.0",
+    "prop-types": "15.7.2",
+    "query-string": "6.5.0",
     "re-resizable": "^4.11.0",
+    "react": "16.8.6",
+    "react-dnd": "7.6.0",
+    "react-dnd-html5-backend": "7.6.0",
+    "react-dom": "16.8.6",
     "react-file-reader": "^1.1.4",
-    "react-helmet": "5.2.0",
+    "react-helmet": "5.2.1",
     "react-infinite-scroller": "^1.2.4",
     "react-player": "^1.7.0",
+    "react-router": "5.0.1",
+    "react-router-dom": "5.0.1",
     "react-syntax-highlighter": "^9.0.0",
     "react-tabs": "^2.2.2",
     "react-tooltip": "^3.9.2",
     "sweetalert2": "^8.0.5",
-    "sweetalert2-react-content": "^1.0.1"
+    "sweetalert2-react-content": "^1.0.1",
+    "symbol-observable": "^1.2.0"
   },
   "devDependencies": {
-    "@back4app/back4app-settings": "^1.1.0",
-    "@babel/core": "7.4.3",
-    "@babel/plugin-proposal-decorators": "7.4.0",
-    "@babel/plugin-transform-regenerator": "7.4.3",
-    "@babel/plugin-transform-runtime": "7.4.3",
-    "@babel/polyfill": "7.4.3",
-    "@babel/preset-env": "7.4.3",
+    "@babel/core": "7.4.5",
+    "@babel/plugin-proposal-decorators": "7.4.4",
+    "@babel/plugin-transform-regenerator": "7.4.5",
+    "@babel/plugin-transform-runtime": "7.4.4",
+    "@babel/polyfill": "7.4.4",
+    "@babel/preset-env": "7.4.5",
     "@babel/preset-react": "7.0.0",
-    "@babel/runtime": "7.4.3",
     "babel-eslint": "10.0.0",
-    "babel-loader": "8.0.0",
+    "babel-loader": "8.0.6",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "1.0.0",
-    "eslint": "5.0.0",
+    "core-js": "2.6.9",
+    "eslint": "5.16.0",
     "eslint-plugin-jest": "22.5.1",
-    "eslint-plugin-react": "7.12.4",
     "file-loader": "3.0.0",
-    "history": "4.9.0",
+    "eslint-plugin-react": "7.13.0",
     "http-server": "0.11.1",
-    "immutable": "3.8.1",
-    "immutable-devtools": "0.1.3",
-    "jest-cli": "23.2.0",
-    "js-beautify": "1.9.1",
+    "jest": "24.8.0",
     "marked": "0.6.2",
-    "node-sass": "4.9.3",
+    "node-sass": "4.12.0",
     "nodemon": "^1.18.3",
     "path-to-regexp": "3.0.0",
-    "prismjs": "1.16.0",
-    "prop-types": "15.7.2",
-    "query-string": "6.4.2",
-    "react": "16.8.6",
-    "react-dnd": "7.4.5",
-    "react-dnd-html5-backend": "7.4.4",
-    "react-dom": "16.8.6",
-    "react-router": "4.4.0-beta.8",
-    "react-router-dom": "4.4.0-beta.8",
     "react-test-renderer": "16.8.6",
     "request": "2.87.0",
     "request-promise": "4.2.4",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
     "svg-prep": "1.0.4",
-    "webpack": "4.30.0",
-    "webpack-cli": "3.3.1"
+    "webpack": "4.33.0",
+    "webpack-cli": "3.3.4"
   },
   "scripts": {
     "dev": "nodemon ./Parse-Dashboard/index.js & webpack --config webpack/build.config.js --devtool eval-source-map --progress --watch",
