--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "babel-loader": "8.0.6",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "core-js": "2.6.5",
+    "cross-env": "5.2.0",
     "css-loader": "2.1.1",
     "eslint": "5.16.0",
     "eslint-plugin-jest": "22.5.1",
@@ -99,8 +100,8 @@
     "dev": "node ./Parse-Dashboard/index.js & webpack --config webpack/build.config.js --devtool eval-source-map --progress --watch",
     "dashboard": "node ./Parse-Dashboard/index.js & webpack --config webpack/build.config.js --progress --watch",
     "pig": "http-server ./PIG -p 4041 -s & webpack --config webpack/PIG.config.js --progress --watch",
-    "build": "NODE_ENV=production webpack --config webpack/production.config.js && webpack --config webpack/PIG.config.js",
-    "test": "NODE_PATH=./node_modules jest",
+    "build": "cross-env NODE_ENV=production webpack --config webpack/production.config.js && webpack --config webpack/PIG.config.js",
+    "test": "cross-env NODE_PATH=./node_modules jest",
     "lint": "eslint . --ignore-path .gitignore --cache",
     "pretest": "npm run lint",
     "generate": "node scripts/generate.js",
