--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
     "svg-prep": "1.0.4",
+    "terser-webpack-plugin": "^1.3.0",
     "webpack": "4.33.0",
     "webpack-cli": "3.3.5"
   },
