--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "Cloud Code Viewer",
     "Cloud Code Jobs Viewer and Runner",
     "Parse Config",
-    "API Console",
+    "REST API Console",
+    "GraphQL API Console",
     "Class Level Permissions Editor",
     "Pointer Permissions Editor",
     "Send Push Notifications",
@@ -20,7 +21,7 @@
   ],
   "homepage": "https://github.com/ParsePlatform/parse-dashboard",
   "bugs": "https://github.com/ParsePlatform/parse-dashboard/issues",
-  "version": "1.3.3",
+  "version": "1.4.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/ParsePlatform/parse-dashboard"
