--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "material-design-iconic-font": "^2.2.0",
     "moment": "^2.24.0",
     "package-json": "6.4.0",
-    "parse": "git+https://github.com/back4app/Parse-SDK-JS.git#upstream",
+    "parse": "git+https://github.com/back4app/Parse-SDK-JS.git#back4app-upstream",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
     "popper.js": "^1.12.9",
