--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "LICENSE"
   ],
   "dependencies": {
-    "@babel/runtime": "7.5.4",
-    "bcryptjs": "2.4.3",
+    "@babel/runtime": "7.5.0",
+    "bcryptjs": "2.3.0",
     "body-parser": "1.19.0",
     "commander": "2.20.0",
     "connect-flash": "0.1.1",
@@ -43,36 +43,36 @@
     "create-react-class": "15.6.3",
     "csurf": "1.10.0",
     "express": "4.17.1",
-    "graphql": "^14.3.1",
-    "graphql-playground-react": "^1.7.20",
+    "graphql": "14.3.1",
+    "graphql-playground-react": "1.7.20",
     "history": "4.9.0",
-    "immutable": "^4.0.0-rc.9",
-    "immutable-devtools": "0.1.4",
+    "immutable": "4.0.0-rc.9",
+    "immutable-devtools": "0.1.3",
     "js-beautify": "1.10.0",
-    "json-file-plus": "3.3.1",
+    "json-file-plus": "3.2.0",
     "package-json": "6.4.0",
-    "parse": "2.5.1",
+    "parse": "2.4.0",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
     "prop-types": "15.7.2",
     "prismjs": "1.16.0",
-    "query-string": "6.8.1",
+    "query-string": "6.5.0",
     "react": "16.8.6",
-    "react-dnd": "9.3.2",
-    "react-dnd-html5-backend": "9.3.2",
+    "react-dnd": "8.0.3",
+    "react-dnd-html5-backend": "8.0.3",
     "react-dom": "16.8.6",
     "react-helmet": "5.2.1",
-    "react-redux": "^7.1.0",
+    "react-redux": "5.1.1",
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1"
   },
   "devDependencies": {
-    "@babel/core": "7.5.4",
+    "@babel/core": "7.5.0",
     "@babel/plugin-proposal-decorators": "7.4.4",
     "@babel/plugin-transform-regenerator": "7.4.5",
     "@babel/plugin-transform-runtime": "7.5.0",
     "@babel/polyfill": "7.4.4",
-    "@babel/preset-env": "7.5.4",
+    "@babel/preset-env": "7.5.0",
     "@babel/preset-react": "7.0.0",
     "babel-eslint": "10.0.2",
     "babel-loader": "8.0.6",
@@ -80,23 +80,23 @@
     "core-js": "2.6.5",
     "css-loader": "2.1.1",
     "eslint": "5.16.0",
-    "eslint-plugin-jest": "22.8.0",
-    "eslint-plugin-react": "7.14.2",
+    "eslint-plugin-jest": "22.5.1",
+    "eslint-plugin-react": "7.14.1",
     "file-loader": "4.0.0",
     "http-server": "0.11.1",
     "jest": "24.8.0",
-    "marked": "0.7.0",
+    "marked": "0.6.2",
     "node-sass": "4.12.0",
     "parse-server": "github:parseplatform/parse-server#master",
     "path-to-regexp": "3.0.0",
     "puppeteer": "1.18.1",
     "react-test-renderer": "16.8.6",
-    "request": "2.88.0",
+    "request": "2.87.0",
     "request-promise": "4.2.4",
     "sass-loader": "7.1.0",
-    "style-loader": "0.23.1",
+    "style-loader": "0.23.0",
     "svg-prep": "1.0.4",
-    "webpack": "4.35.3",
+    "webpack": "4.33.0",
     "webpack-cli": "3.3.6"
   },
   "scripts": {
