fix: Webpack warnings due to Flow files from node_modules

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/runtime": "7.5.0",
     "bcryptjs": "2.3.0",
     "body-parser": "1.19.0",
+    "codemirror-graphql": "github:timsuchanek/codemirror-graphql#details-fix",
     "commander": "2.20.0",
     "connect-flash": "0.1.1",
     "cookie-session": "2.0.0-beta.3",
@@ -54,8 +55,8 @@
     "parse": "2.4.0",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
-    "prop-types": "15.7.2",
     "prismjs": "1.16.0",
+    "prop-types": "15.7.2",
     "query-string": "6.5.0",
     "react": "16.8.6",
     "react-dnd": "8.0.3",
@@ -87,6 +88,7 @@
     "jest": "24.8.0",
     "marked": "0.6.2",
     "node-sass": "4.12.0",
+    "null-loader": "^3.0.0",
     "parse-server": "github:parseplatform/parse-server#master",
     "path-to-regexp": "3.0.0",
     "puppeteer": "1.18.1",
