--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "react-helmet": "5.2.1",
     "react-redux": "5.1.1",
     "react-router": "5.0.1",
-    "react-router-dom": "5.0.1"
+    "react-router-dom": "5.0.1",
+    "semver": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
