--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-redux": "5.1.1",
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
+    "regenerator-runtime": "^0.13.3",
     "semver": "^6.3.0"
   },
   "devDependencies": {
@@ -73,7 +74,6 @@
     "@babel/plugin-proposal-decorators": "7.4.4",
     "@babel/plugin-transform-regenerator": "7.4.5",
     "@babel/plugin-transform-runtime": "7.5.5",
-    "@babel/polyfill": "7.4.4",
     "@babel/preset-env": "7.5.5",
     "@babel/preset-react": "7.0.0",
     "babel-eslint": "10.0.2",
