--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "immutable-devtools": "0.1.3",
     "intro.js": "^2.9.3",
     "jquery": "^3.2.1",
-    "js-base64": "^2.5.1"
+    "js-base64": "^2.5.1",
     "js-beautify": "1.10.2",
     "json-file-plus": "3.2.0",
     "jstree": "^3.3.5",
@@ -79,13 +79,13 @@
     "react-helmet": "5.2.1",
     "react-infinite-scroller": "^1.2.4",
     "react-player": "^1.7.0",
-    "react-redux": "^5.1.1",
     "react-redux": "5.1.1",
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
     "react-syntax-highlighter": "^9.0.0",
     "react-tabs": "^2.2.2",
     "react-tooltip": "^3.9.2",
+    "re-resizable": "^4.11.0",
     "semver": "^6.3.0",
     "sweetalert2": "^8.0.5",
     "sweetalert2-react-content": "^1.0.1",
@@ -103,7 +103,7 @@
     "babel-eslint": "10.0.2",
     "babel-loader": "8.0.6",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "clean-webpack-plugin": "^0.1.19",    
+    "clean-webpack-plugin": "^0.1.19",
     "core-js": "2.6.5",
     "css-loader": "3.2.0",
     "eslint": "6.1.0",
