--- a/package.json
+++ b/package.json
@@ -130,15 +130,17 @@
     "webpack-cli": "3.3.6"
   },
   "scripts": {
-    "dev": "node ./Parse-Dashboard/index.js & webpack --config webpack/build.config.js --devtool eval-source-map --progress --watch",
+    "dev": "nodemon ./Parse-Dashboard/index.js & webpack --config webpack/build.config.js --devtool eval-source-map --progress --watch",
     "dashboard": "node ./Parse-Dashboard/index.js & webpack --config webpack/build.config.js --progress --watch",
     "pig": "http-server ./PIG -p 4041 -s & webpack --config webpack/PIG.config.js --progress --watch",
-    "build": "NODE_ENV=production webpack --config webpack/production.config.js && webpack --config webpack/PIG.config.js",
+    "build": "NODE_ENV=production webpack --config webpack/production.config.js && webpack --config webpack/PIG.config.js && NODE_ENV=production webpack --config webpack/publish.config.js --progress",
+    "build-homolog": "NODE_ENV=homolog webpack --config webpack/homolog.config.js",
     "test": "NODE_PATH=./node_modules jest",
     "lint": "eslint . --ignore-path .gitignore --cache",
     "pretest": "npm run lint",
     "generate": "node scripts/generate.js",
-    "prepare": "webpack --config webpack/publish.config.js --progress",
+    "deploy-homolog": "sh deploy-homolog.sh",
+    "deploy-prod": "sh deploy-prod.sh",
     "server": "node server.js",
     "start": "node ./Parse-Dashboard/index.js"
   },
