--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "commander": "3.0.1",
     "connect-flash": "0.1.1",
     "cookie-session": "2.0.0-beta.3",
+    "copy-to-clipboard": "^3.2.0",
     "create-react-class": "15.6.3",
     "csurf": "1.10.0",
     "express": "4.17.1",
