--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   ],
   "homepage": "https://github.com/ParsePlatform/parse-dashboard",
   "bugs": "https://github.com/ParsePlatform/parse-dashboard/issues",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "repository": {
     "type": "git",
     "url": "https://github.com/ParsePlatform/parse-dashboard"
@@ -89,7 +89,7 @@
     "file-loader": "4.2.0",
     "http-server": "0.11.1",
     "jest": "24.8.0",
-    "marked": "0.6.2",
+    "marked": "^0.7.0",
     "node-sass": "4.12.0",
     "null-loader": "^3.0.0",
     "parse-server": "github:parseplatform/parse-server#master",
