--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "file-loader": "4.2.0",
     "http-server": "0.11.1",
     "jest": "24.8.0",
-    "marked": "^0.7.0",
+    "marked": "0.7.0",
     "node-sass": "4.12.0",
     "null-loader": "^3.0.0",
     "parse-server": "github:parseplatform/parse-server#master",
