--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
   ],
   "dependencies": {
     "@babel/runtime": "7.6.3",
+    "@babel/runtime-corejs3": "^7.6.3",
     "bcryptjs": "2.3.0",
     "body-parser": "1.19.0",
     "codemirror-graphql": "github:timsuchanek/codemirror-graphql#details-fix",
     "commander": "3.0.2",
     "connect-flash": "0.1.1",
     "cookie-session": "2.0.0-beta.3",
-    "copy-to-clipboard": "^3.2.0",
+    "copy-to-clipboard": "3.2.0",
     "create-react-class": "15.6.3",
     "csurf": "1.10.0",
     "express": "4.17.1",
@@ -67,8 +68,8 @@
     "react-redux": "5.1.1",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "regenerator-runtime": "^0.13.3",
-    "semver": "^6.3.0"
+    "regenerator-runtime": "0.13.3",
+    "semver": "6.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.6.4",
@@ -91,7 +92,7 @@
     "jest": "24.8.0",
     "marked": "0.7.0",
     "node-sass": "4.12.0",
-    "null-loader": "^3.0.0",
+    "null-loader": "3.0.0",
     "parse-server": "github:parseplatform/parse-server#master",
     "path-to-regexp": "3.1.0",
     "puppeteer": "1.20.0",
