--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
   ],
   "dependencies": {
     "@babel/runtime": "7.6.3",
-    "@babel/runtime-corejs3": "^7.6.3",
     "bcryptjs": "2.3.0",
     "body-parser": "1.19.0",
     "codemirror-graphql": "github:timsuchanek/codemirror-graphql#details-fix",
@@ -78,6 +77,7 @@
     "@babel/plugin-transform-runtime": "7.6.2",
     "@babel/preset-env": "7.6.3",
     "@babel/preset-react": "7.6.3",
+    "@babel/runtime-corejs3": "7.6.3",
     "babel-eslint": "10.0.3",
     "babel-loader": "8.0.6",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
