--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-redux": "5.1.1",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
+    "react-simple-code-editor": "^0.10.0",
     "regenerator-runtime": "0.13.3",
     "semver": "6.3.0"
   },
