Introducing general, reusable ContextMenu component

--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -1,12 +1,13 @@
 {
   "apps": [{
-    "serverURL": "http://localhost:1338/parse",
-    "appId": "hello",
-    "masterKey": "world",
-    "appName": "",
+    "serverURL": "https://digdig-dev.appspot.com/parse",
+    "appId": "DigDigDev",
+    "masterKey": "DigDigDevMasterKey",
+    "appName": "DigDigDev",
     "iconName": "",
     "primaryBackgroundColor": "",
     "secondaryBackgroundColor": ""
-  }],
+  }
+  ],
   "iconsFolder": "icons"
 }
