--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "http-server": "0.12.0",
     "jest": "24.8.0",
     "marked": "0.8.0",
-    "node-sass": "4.13.0",
+    "node-sass": "^4.13.1",
     "null-loader": "^3.0.0",
     "parse-server": "github:parseplatform/parse-server#master",
     "path-to-regexp": "3.2.0",
