feat(Playground): update CodeEditor component and show result just in console

--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -1,10 +1,10 @@
 {
   "apps": [
     {
-      "serverURL": "http://localhost:1338/parse",
-      "appId": "hello",
-      "masterKey": "world",
-      "appName": "",
+      "serverURL": "https://parsedev.behive.io/parse",
+      "appId": "Q2keNQdPMD2t3dzwWANyw5w5MzaT5h6TfdVAm5oC",
+      "masterKey": "tBlFocOzlsGKSad40KmLx7wckRhxSAFhgV72GlTK",
+      "appName": "Test",
       "iconName": "",
       "primaryBackgroundColor": "",
       "secondaryBackgroundColor": ""
