--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "prop-types": "15.7.2",
     "query-string": "6.9.0",
     "react": "16.12.0",
+    "react-ace": "^8.0.0",
     "react-dnd": "10.0.2",
     "react-dnd-html5-backend": "10.0.2",
     "react-dom": "16.12.0",
@@ -68,9 +69,8 @@
     "react-redux": "5.1.1",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-simple-code-editor": "^0.10.0",
     "regenerator-runtime": "0.13.3",
-    "semver": "7.1.2"
+    "semver": "7.1.3"
   },
   "devDependencies": {
     "@babel/core": "7.8.4",
@@ -98,7 +98,7 @@
     "path-to-regexp": "3.2.0",
     "puppeteer": "2.1.1",
     "react-test-renderer": "16.12.0",
-    "request": "2.87.0",
+    "request": "2.88.2",
     "request-promise": "4.2.5",
     "sass-loader": "8.0.0",
     "style-loader": "1.1.2",
