--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dnd-html5-backend": "10.0.2",
     "react-dom": "16.12.0",
     "react-helmet": "5.2.1",
+    "react-json-view": "^1.19.1",
     "react-redux": "7.2.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
