--- a/package.json
+++ b/package.json
@@ -60,10 +60,12 @@
     "prop-types": "15.7.2",
     "query-string": "6.10.1",
     "react": "16.12.0",
+    "react-ace": "^8.0.0",
     "react-dnd": "10.0.2",
     "react-dnd-html5-backend": "10.0.2",
     "react-dom": "16.12.0",
     "react-helmet": "5.2.1",
+    "react-json-view": "^1.19.1",
     "react-redux": "7.2.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
@@ -90,7 +92,7 @@
     "http-server": "0.12.0",
     "jest": "24.8.0",
     "marked": "0.8.0",
-    "node-sass": "4.13.0",
+    "node-sass": "^4.13.1",
     "null-loader": "^3.0.0",
     "parse-server": "github:parseplatform/parse-server#master",
     "path-to-regexp": "3.2.0",
