--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "Parse Config",
     "REST API Console",
     "GraphQL API Console",
+    "JS Custom Query Console",
     "Class Level Permissions Editor",
     "Pointer Permissions Editor",
     "Send Push Notifications",
@@ -21,7 +22,7 @@
   ],
   "homepage": "https://github.com/ParsePlatform/parse-dashboard",
   "bugs": "https://github.com/ParsePlatform/parse-dashboard/issues",
-  "version": "2.0.5",
+  "version": "2.1.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/ParsePlatform/parse-dashboard"
