--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "immutable-devtools": "0.1.5",
     "js-beautify": "1.11.0",
     "json-file-plus": "3.2.0",
+    "otplib": "^12.0.1",
     "package-json": "6.5.0",
     "parse": "2.17.0",
     "passport": "0.4.1",
