--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,12 @@
     "browser": true
   },
   "parser": "@babel/eslint-parser",
-  "extends": "eslint:recommended",
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
   "parserOptions": {
     "requireConfigFile": false,
     "babelOptions": {
@@ -22,6 +27,13 @@
   },
   "plugins": ["react"],
   "rules": {
+    "react/prop-types": 0,
+    "react/display-name": 0,
+    "react/jsx-no-bind": 1,
+    "react/jsx-no-constructed-context-values": 1,
+    "react/no-access-state-in-setstate": 1,
+    "react/void-dom-elements-no-children": 1,
+    "react/no-typos": 1,
     "react/jsx-uses-vars": 1,
     "react/jsx-uses-react": 1,
     "react/react-in-jsx-scope": 1,
