--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,17 +13,17 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v1
       with:
-        node-version: '12'
+        node-version: '10.14'
     - name: Cache Node.js modules
       uses: actions/cache@v2
       with:
         path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
             ${{ runner.os }}-node-
-    - run: yarn install
+    - run: npm ci
     - run: ./scripts/before_script.sh
       env:
         CI: true
