--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,8 +16,8 @@
     "babelOptions": {
       "presets": ["@babel/preset-react"],
       "plugins": [
-        "@babel/plugin-proposal-class-properties",
-        [ "@babel/plugin-proposal-decorators", { "legacy": true } ]
+        [ "@babel/plugin-proposal-decorators", { "decoratorsBeforeExport": false } ],
+        "@babel/plugin-proposal-class-properties"
       ]
     },
     "ecmaFeatures": {
