--- a/package.json
+++ b/package.json
@@ -34,83 +34,80 @@
     "README.md",
     "LICENSE"
   ],
-  "resolutions": {
-    "chokidar": "^3.5.1"
-  },
   "dependencies": {
-    "@babel/runtime": "^7.13.10",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "codemirror-graphql": "^1.0.0",
-    "commander": "^7.1.0",
-    "connect-flash": "^0.1.1",
-    "cookie-session": "^2.0.0-rc.1",
-    "create-react-class": "^15.7.0",
-    "csurf": "^1.11.0",
-    "express": "^4.17.1",
-    "graphql": "^15.5.0",
-    "graphql-playground-react": "^1.7.27",
-    "immutable": "^4.0.0-rc.12",
-    "immutable-devtools": "^0.1.5",
-    "js-beautify": "^1.13.5",
-    "json-file-plus": "^3.3.1",
-    "package-json": "^6.5.0",
-    "parse": "^2.19.0",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "prismjs": "^1.23.0",
-    "prop-types": "^15.7.2",
-    "query-string": "^7.0.0",
-    "react": "^16.14.0",
-    "react-ace": "^9.3.0",
-    "react-copy-to-clipboard": "^5.0.3",
-    "react-dnd": "^14.0.1",
-    "react-dnd-html5-backend": "^14.0.0",
-    "react-dom": "^16.14.0",
-    "react-helmet": "^6.1.0",
-    "react-input-autosize": "^3.0.0",
-    "react-json-view": "^1.21.3",
-    "react-modal": "^3.12.1",
-    "react-redux": "^7.2.2",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-sortable-hoc": "^2.0.0",
-    "regenerator-runtime": "^0.13.7",
-    "semver": "^7.3.4",
-    "styled-components": "^5.0.0"
+    "@babel/runtime": "7.13.10",
+    "bcryptjs": "2.4.3",
+    "body-parser": "1.19.0",
+    "codemirror-graphql": "1.0.0",
+    "commander": "7.2.0",
+    "connect-flash": "0.1.1",
+    "cookie-session": "2.0.0-rc.1",
+    "create-react-class": "15.7.0",
+    "csurf": "1.11.0",
+    "express": "4.17.1",
+    "graphql": "15.5.0",
+    "graphql-playground-react": "1.7.27",
+    "immutable": "4.0.0-rc.12",
+    "immutable-devtools": "0.1.5",
+    "js-beautify": "1.13.5",
+    "json-file-plus": "3.3.1",
+    "package-json": "6.5.0",
+    "parse": "2.19.0",
+    "passport": "0.4.1",
+    "passport-local": "1.0.0",
+    "prismjs": "1.23.0",
+    "prop-types": "15.7.2",
+    "query-string": "7.0.0",
+    "react": "16.14.0",
+    "react-ace": "9.4.0",
+    "react-copy-to-clipboard": "5.0.3",
+    "react-dnd": "14.0.2",
+    "react-dnd-html5-backend": "14.0.0",
+    "react-dom": "16.14.0",
+    "react-helmet": "6.1.0",
+    "react-input-autosize": "3.0.0",
+    "react-json-view": "1.21.3",
+    "react-modal": "3.12.1",
+    "react-redux": "7.2.3",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
+    "react-sortable-hoc": "2.0.0",
+    "regenerator-runtime": "0.13.7",
+    "semver": "7.3.5",
+    "styled-components": "5.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/eslint-parser": "^7.13.10",
-    "@babel/plugin-proposal-decorators": "^7.13.5",
-    "@babel/plugin-transform-regenerator": "^7.12.13",
+    "@babel/core": "7.13.14",
+    "@babel/eslint-parser": "7.13.14",
+    "@babel/plugin-proposal-decorators": "7.13.5",
+    "@babel/plugin-transform-regenerator": "7.12.13",
     "@babel/plugin-transform-runtime": "7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "@babel/preset-react": "^7.12.13",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "core-js": "^3.9.1",
-    "cross-env": "^7.0.3",
-    "css-loader": "^5.1.3",
-    "eslint": "^7.22.0",
-    "eslint-plugin-jest": "^24.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "file-loader": "^6.2.0",
-    "http-server": "^0.12.3",
-    "jest": "^26.6.3",
-    "marked": "^2.0.1",
-    "node-sass": "^5.0.0",
-    "null-loader": "^4.0.1",
+    "@babel/preset-env": "7.13.12",
+    "@babel/preset-react": "7.13.13",
+    "babel-loader": "8.2.2",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "core-js": "3.10.1",
+    "cross-env": "7.0.3",
+    "css-loader": "5.2.0",
+    "eslint": "7.23.0",
+    "eslint-plugin-jest": "24.3.4",
+    "eslint-plugin-react": "7.23.1",
+    "file-loader": "6.2.0",
+    "http-server": "0.12.3",
+    "jest": "26.6.3",
+    "marked": "2.0.1",
+    "node-sass": "5.0.0",
+    "null-loader": "4.0.1",
     "parse-server": "github:parseplatform/parse-server#master",
-    "puppeteer": "^8.0.0",
-    "react-test-renderer": "^16.14.0",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6",
-    "sass-loader": "^10.0.5",
-    "style-loader": "^2.0.0",
-    "svg-prep": "^1.0.4",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.10"
+    "puppeteer": "8.0.0",
+    "react-test-renderer": "16.14.0",
+    "request": "2.88.2",
+    "request-promise": "4.2.6",
+    "sass-loader": "10.1.1",
+    "style-loader": "2.0.0",
+    "svg-prep": "1.0.4",
+    "webpack": "4.46.0",
+    "webpack-cli": "3.3.12"
   },
   "scripts": {
     "dev": "node ./Parse-Dashboard/index.js & webpack --config webpack/build.config.js --devtool eval-source-map --progress --watch",
