--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "immutable-devtools": "0.1.5",
     "js-beautify": "1.13.13",
     "json-file-plus": "3.2.0",
+    "moment": "^2.29.1",
     "package-json": "6.5.0",
     "parse": "2.19.0",
     "passport": "0.4.1",
@@ -72,7 +73,9 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "regenerator-runtime": "0.13.5",
-    "semver": "7.3.4"
+    "semver": "7.3.4",
+    "sweetalert2": "^11.0.16",
+    "sweetalert2-react-content": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.8.7",
